--- a/Assignment_1/Assignment_1.cbp
+++ b/Assignment_1/Assignment_1.cbp
@@ -32,7 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Restaurant.cpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="main.h" />
+		<Unit filename="test.txt" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
